--- a/src/BD/AlquilerInterfaz/CalendarioDispo.form
+++ b/src/BD/AlquilerInterfaz/CalendarioDispo.form
@@ -62,10 +62,6 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="jScrollPane2" min="-2" pref="735" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
                       <Component id="btncrear" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="23" pref="23" max="-2" attributes="0"/>
@@ -77,8 +73,12 @@
                       <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
                       <Component id="btnTodos" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jScrollPane2" min="-2" pref="764" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="45" max="32767" attributes="0"/>
+              <EmptySpace pref="36" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -118,15 +118,15 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btncrear" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnConsul" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnModi" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnDelete" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnTodos" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="btncrear" max="32767" attributes="0"/>
+                  <Component id="btnDelete" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnModi" alignment="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="btnConsul" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnTodos" alignment="0" pref="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jScrollPane2" pref="208" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+              <Component id="jScrollPane2" pref="196" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -213,6 +213,9 @@
     </Container>
     <Component class="javax.swing.JButton" name="btncrear">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/imagenes/crear.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="CREAR"/>
       </Properties>
       <Events>
@@ -221,6 +224,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnConsul">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/imagenes/busqueda.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="CONSULTAR"/>
       </Properties>
       <Events>
@@ -229,6 +235,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnModi">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/imagenes/mod.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="MODIFICAR"/>
       </Properties>
       <Events>
@@ -237,6 +246,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnDelete">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/imagenes/eliminar.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="ELIMINAR"/>
       </Properties>
       <Events>
@@ -251,7 +263,10 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnTodos">
       <Properties>
-        <Property name="text" type="java.lang.String" value="VER TODOS"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/imagenes/informe.png"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="REPORTE"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTodosActionPerformed"/>
